# wl-gammactl-rust

./: .SRCINFO  Cargo.toml  PKGBUILD  README.md  wl-gammactl-rust.desktop
src/: cli.rs  gamma.rs  gui.rs  main.rs  wayland.rs
